# NLFEM

./: CMakeLists.txt  README.md  common.hpp  element.cpp  element.hpp  input.txt  input_linearFEM.txt  main.cpp  material.hpp  radial_return.cpp  solver.cpp  solver.hpp
input/: final.txt  final_case1.txt  final_case2.txt  hw3a.txt  hw3b.txt  hw3c.txt  hw6.txt  linear_fem.txt  midterm1.txt  midterm1_10steps.txt  midterm1_20steps.txt  midterm2.txt  midterm2_10steps.txt  midterm2_20steps.txt  test.txt
